--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
       <li>Microplastic pollution and marine megafauna entanglements. EMILY TO EDIT + PROVIDE LINKS</li>
     </ul>
   </div>
-  <img src="Photo-Ben.jpg" alt="" class="service-image">
+  <img src="images/Photo-Ben.jpg" alt="" class="service-image">
 </div>
 
 <div class="service-section reverse">
@@ -46,7 +46,7 @@
       <li>Comparing light pollution levels across UK local authorities and habitats.</li>
     </ul>
   </div>
-  <img src="Photo-Ben.jpg" alt="" class="service-image">
+  <img src="images/Photo-Ben.jpg" alt="" class="service-image">
 </div>
 
 <div class="service-section">
@@ -60,7 +60,7 @@
       <li>Conducting stakeholder interviews and focus groups <a href="https://doi.org/10.1002/2688-8319.12198">to guide a conservation strategy for hazel dormouse</a>.</li>
     </ul>
   </div>
-  <img src="Photo-Ben.jpg" alt="" class="service-image">
+  <img src="images/Photo-Ben.jpg" alt="" class="service-image">
 </div>
 
 <div class="service-section reverse">
@@ -75,7 +75,7 @@
       <li>Marine environment - Particularly relating to marine megafauna, fishing and microplastics. (EMILY TO EDIT)</li>
     </ul>
   </div>
-  <img src="Photo-Ben.jpg" alt="" class="service-image">
+  <img src="images/Photo-Ben.jpg" alt="" class="service-image">
 </div>
 
 <div class="service-section">
@@ -83,7 +83,7 @@
     <p><b>5. ANYTHING ELSE EMILY?</b></p>
     <p>[You can add your fifth block text here when ready.]</p>
   </div>
-  <img src="Photo-Ben.jpg" alt="" class="service-image">
+  <img src="images/Photo-Ben.jpg" alt="" class="service-image">
 </div>
 
     <p style="text-align: center; font-size: 1.5rem;">...</p>
