--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
 
   <section>
     <h2>About Us</h2>
-    <p style="text-align: center;">At Apex Science & Conservation, we provide scientific support and deliver nature conservation research that is rigorous, practical, and directly relevant to real-world decisions.</p>
-    <p style="text-align: center;">We work in partnership with NGOs, government agencies, and research institutions, offering the expertise and capacity needed to carry out projects that might otherwise not be possible.</p>
+    <p style="text-align: center;">At Apex Science & Conservation, we provide scientific support and deliver 
+      nature conservation research that is rigorous, practical, and directly relevant to real-world decisions.</p>
+    <p style="text-align: center;">We work in partnership with NGOs, government agencies, and research institutions, 
+      offering the expertise and capacity needed to carry out projects that would not otherwise be possible.</p>
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     <p>Our work spans three key areas:</p>
-    <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys, field experiments, GIS mapping and analysis, and evidence reviews to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
-    <p>🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
-    <p>🛠️ <b>Consultancy & Data Services</b> – We offer grant writing support, general environmental consultancy, and data management and analysis services to organisations seeking clear, evidence-based insights.</p>
+    <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys, field experiments, GIS mapping and analysis, 
+      and evidence reviews to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
+    <p>🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - 
+      using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
+    <p>🛠️ <b>Consultancy & Data Services</b> – We offer grant writing support, general environmental consultancy, 
+      and data management and analysis services to organisations seeking clear, evidence-based insights.</p>
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     <p>For further details on how we can support your organisation, see our <b>Services</b> page.</p>
                                                                          
@@ -36,9 +41,11 @@
   <img src="images/Photo-Ben.jpg" alt="Dr Ben Phillips" style="width: 150px; height: auto; border-radius: 8px;">
   <div>
     <p style="margin-top: 0;"><b>Dr Ben Phillips</b></p>
-    <p>Ben is a nature conservation scientist with over 10 years’ experience delivering applied research that supports biodiversity, informs land management, and connects people with nature.</p>
+    <p>Ben is a nature conservation scientist with over 10 years’ experience delivering applied research that 
+      supports biodiversity, informs land management, and connects people with nature.</p>
     <p>His work combines ecological and social sciences using a collaborative, solution-focused approach. 
-      Particular focuses have included pollinator conservation, management of road verges, and understanding people's attitudes and behaviour relating to nature.</p>
+      Particular focuses have included pollinator conservation, management of road verges, and understanding 
+      people's attitudes and behaviour relating to nature.</p>
   </div>
 </div>
 
