--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p style="text-align: center;">At Apex Science & Conservation, we provide scientific support and deliver 
       nature conservation research that is rigorous, practical, and directly relevant to real-world decisions.</p>
     <p style="text-align: center;">We work in partnership with NGOs, government agencies, and research institutions, 
-      offering the expertise and capacity needed to carry out projects that would not otherwise be possible.</p>
+      offering the expertise and capacity to carry out projects that wouldn't otherwise be possible.</p>
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     <p>Our work spans three key areas:</p>
     <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys, field experiments, GIS mapping and analysis, 
