--- a/services.html
+++ b/services.html
@@ -81,7 +81,7 @@
 <div class="service-section">
   <div class="service-text">
     <p><b>5. ANYTHING ELSE EMILY?</b></p>
-    <p>[You can add your fifth block text here when ready.]</p>
+    <p>[Or split out e.g. Grant Writing from above?]</p>
   </div>
   <img src="images/Photo-Ben.jpg" alt="" class="service-image">
 </div>
