--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p>🛠️ <b>Consultancy & Data Services</b> – We offer grant writing support, general environmental consultancy, 
       and data management and analysis services to organisations seeking clear, evidence-based insights.</p>
     <p style="text-align: center; font-size: 1.5rem;">...</p>
-    <p>For further details on how we can support your organisation, see our <b>Services</b> page.</p>
+    <p>For further details on how we can support your work, see our <b>Services</b> page.</p>
                                                                          
     <h2 style="margin-top: 3.5rem;">Who we are...</h2>
     
