--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
   <img src="images/Photo-Emily.jpg" alt="Dr Emily Duncan" style="width: 150px; height: auto; border-radius: 8px;">
   <div>
     <p style="margin-top: 0;"><b>Dr Emily Duncan</b></p>
-    <p>Emily is a conservation biologist with more than a decade of experience working in marine research across the world.</p>
+    <p>Emily is a conservation biologist with more than a decade of experience carrying out marine research globally.</p>
     <p>Much of her work has focused on marine megafauna and plastic pollution, for which she was named on the prestigious Forbes 30 Under 30 list. 
-      She is experienced in delivering large collaborative international projects, and positions policy and community engagement at the heart of her work.</p>
+      Emily is experienced in delivering large collaborative international projects, and positions policy and community engagement at the heart of her work.</p>
   </div>
 </div>
     
