--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
 
 <div class="service-section">
   <div class="service-text">
-    <p><b>1. Evidence Synthesis</b></p>
+    <h3>1. Evidence Synthesis</h3>
     <p>We are experienced in collating evidence (on a wide variety of topics) to a rigorous scientific standard.</p>
     <p>Our experience includes reviewing evidence for...</p>
     <ul>
