--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
 
 <div class="service-section reverse">
   <div class="service-text">
-    <p><b>2. Data Services & Geographical Information Systems (GIS)</b></p>
+    <h3>2. Data Services & Geographical Information Systems (GIS)</h3>
     <p>We can assist with managing, visualising and analysing ecological and social data, including spatial mapping and analysis and using large, unwieldy datasets.</p>
     <p>Our experience includes...</p>
     <ul>
@@ -51,7 +51,7 @@
 
 <div class="service-section">
   <div class="service-text">
-    <p><b>3. Social Science Approaches</b></p>
+    <h3>3. Social Science Approaches</h3>
     <p>We are experienced in researching people's attitudes, values and behaviours - particularly how people engage with nature - using surveys, interviews and digital data sources. This information can help to shape more effective and inclusive strategies in nature conservation and beyond.</p>
     <p>Our experience includes...</p>
     <ul>
@@ -65,7 +65,7 @@
 
 <div class="service-section reverse">
   <div class="service-text">
-    <p><b>4. General Scientific Consultancy Services</b></p>
+    <h3>4. General Scientific Consultancy Services</h3>
     <p>We are also able to provide organisations with general scientific consultancy services, including grant writing, programme development, and practical management guidance relating to both the terrestrial and marine environments.</p>
     <p>Our experience includes...</p>
     <ul>
@@ -80,7 +80,7 @@
 
 <div class="service-section">
   <div class="service-text">
-    <p><b>5. ANYTHING ELSE EMILY?</b></p>
+    <h3>5. ANYTHING ELSE EMILY?</h3>
     <p>[Or split out e.g. Grant Writing from above?]</p>
   </div>
   <img src="images/Photo-Ben.jpg" alt="" class="service-image">
