--- a/services.html
+++ b/services.html
@@ -88,7 +88,8 @@
 
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     
-    <p style="margin-top: 3rem;">If you have a need that isn't listed above, don't hesitate to get in touch. We will be more than happy to discuss your requirements, and to point you in the right direction if we can.</p>
+    <p style="margin-top: 3rem;">If you have a need that isn't listed above, don't hesitate to get in touch.</p>
+    <p>We will be more than happy to discuss your requirements, and to point you in the right direction wherever we can.</p>
 
   </section>
 
