--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,21 @@
   </header>
 
   <section>
-    <h2>Contact Us</h2>
-    <p><b>Email:</b> <a href="mailto:bphillips.consultancy@gmail.com">bphillips.consultancy@gmail.com</a></p>
-    <p><b>LinkedIn:</b> Connect with <a href="https://www.linkedin.com/in/benjamin-b-phillips/">Ben</a> / <a href="https://www.linkedin.com/in/emily-duncan-7a324b64">Emily</a></p>
-  </section>
+  <h2>Contact Us</h2>
+  <p>
+    <img src="images/email.svg" alt="Email icon" class="contact-icon">
+    <b>Email:</b> 
+    <a href="mailto:bphillips.consultancy@gmail.com">bphillips.consultancy@gmail.com</a>
+  </p>
+  <p>
+    <img src="images/linkedin.png" alt="LinkedIn icon" class="contact-icon">
+    <b>LinkedIn:</b> 
+    Connect with 
+    <a href="https://www.linkedin.com/in/benjamin-b-phillips/">Ben</a> /
+    <a href="https://www.linkedin.com/in/emily-duncan-7a324b64">Emily</a>
+  </p>
+</section>
+
 
   <footer>
     &copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.
