--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 </div>
 
-<div class="profile" style="display: flex; align-items: center; gap: 1rem; margin-top: 2rem;">
+<div class="profile" style="display: flex; align-items: center; gap: 1rem; margin-top: 2rem; flex-direction: row-reverse;">
   <img src="images/Photo-Emily.jpg" alt="Dr Emily Duncan" style="width: 150px; height: auto; border-radius: 8px;">
   <div>
     <p style="margin-top: 0;"><b>Dr Emily Duncan</b></p>
