--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="profile" style="display: flex; align-items: center; gap: 1rem; margin-top: 2rem;">
   <img src="images/Photo-Ben.jpg" alt="Dr Ben Phillips" style="width: 250px; height: auto; border-radius: 8px;">
   <div>
-    <p style="margin-top: 0;"><b>Dr Ben Phillips</b></p>
+    <h3 style="margin-top: 0;">Dr Ben Phillips</h3>
     <p>Ben is a nature conservation scientist with over 10 years’ experience delivering applied research that 
       supports biodiversity, informs land management, and connects people with nature.</p>
     <p>His work combines ecological and social sciences using a collaborative, solution-focused approach. 
@@ -52,7 +52,7 @@
 <div class="profile" style="display: flex; align-items: center; gap: 1rem; margin-top: 2rem; flex-direction: row-reverse;">
   <img src="images/Photo-Emily.jpg" alt="Dr Emily Duncan" style="width: 250px; height: auto; border-radius: 8px;">
   <div>
-    <p style="margin-top: 0;"><b>Dr Emily Duncan</b></p>
+    <h3 style="margin-top: 0;">Dr Emily Duncan</h3>
     <p>Emily is a conservation biologist with more than a decade of experience carrying out marine research globally.</p>
     <p>Much of her work has focused on marine megafauna and plastic pollution, for which she was named on the prestigious Forbes 30 Under 30 list. 
       Emily is experienced in delivering large collaborative international projects, and positions policy and community engagement at the heart of her work.</p>
