--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
       <li>Microplastic pollution and marine megafauna entanglements. EMILY TO EDIT + PROVIDE LINKS</li>
     </ul>
   </div>
-  <img src="images/Photo-Ben.jpg" alt="" class="service-image">
+  <img src="images/evidence-synthesis.jpg" alt="" class="service-image">
 </div>
 
 <div class="service-section reverse">
