--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
       <li>Comparing light pollution levels across UK local authorities and habitats.</li>
     </ul>
   </div>
-  <img src="images/Photo-Ben.jpg" alt="" class="service-image">
+  <img src="images/data-services.jpg" alt="" class="service-image">
 </div>
 
 <div class="service-section">
@@ -60,7 +60,7 @@
       <li>Conducting stakeholder interviews and focus groups <a href="https://doi.org/10.1002/2688-8319.12198">to guide a conservation strategy for hazel dormouse</a>.</li>
     </ul>
   </div>
-  <img src="images/Photo-Ben.jpg" alt="" class="service-image">
+  <img src="images/social-science.jpg" alt="" class="service-image">
 </div>
 
 <div class="service-section reverse">
@@ -75,7 +75,7 @@
       <li>Marine environment - Particularly relating to marine megafauna, fishing and microplastics. (EMILY TO EDIT)</li>
     </ul>
   </div>
-  <img src="images/Photo-Ben.jpg" alt="" class="service-image">
+  <img src="images/general-consultancy.jpg" alt="" class="service-image">
 </div>
 
 <div class="service-section">
@@ -83,7 +83,7 @@
     <h3>5. ANYTHING ELSE EMILY?</h3>
     <p>[Or split out e.g. Grant Writing from above?]</p>
   </div>
-  <img src="images/Photo-Ben.jpg" alt="" class="service-image">
+  <img src="images/anything-else.jpg" alt="" class="service-image">
 </div>
 
     <p style="text-align: center; font-size: 1.5rem;">...</p>
