--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
     <p>We are experienced in collating evidence (on a wide variety of topics) to a rigorous scientific standard.</p>
     <p>Our experience includes reviewing evidence for...</p>
     <ul>
-      <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> with the conservation charity Buglife, and <a href="https://doi.org/10.1111/1365-2664.13556">for broader environmental and social benefits</a>.</li> 
+      <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and <a href="https://doi.org/10.1111/1365-2664.13556">for other environmental and social benefits</a>.</li> 
       <li>Environmental links between forests and oceans for The Woodland Trust.</li>
       <li>Microplastic pollution and marine megafauna entanglements. EMILY TO EDIT + PROVIDE LINKS</li>
     </ul>
