--- a/services.html
+++ b/services.html
@@ -21,8 +21,8 @@
   <section>
     <h2>Our Services & Experience</h2>
 
-<div class="service-section">
-  <div class="service-text">
+<div class="sidepicture-section">
+  <div class="sidepicture-text">
     <h3>1. Evidence Synthesis</h3>
     <p>We are experienced in collating evidence (on a wide variety of topics) to a rigorous scientific standard.</p>
     <p>Our experience includes reviewing evidence for...</p>
@@ -32,11 +32,11 @@
       <li>Microplastic pollution and marine megafauna entanglements. EMILY TO EDIT + PROVIDE LINKS</li>
     </ul>
   </div>
-  <img src="images/evidence-synthesis.jpg" alt="" class="service-image">
+  <img src="images/evidence-synthesis.jpg" alt="" class="sidepicture-image">
 </div>
 
-<div class="service-section reverse">
-  <div class="service-text">
+<div class="sidepicture-section reverse">
+  <div class="sidepicture-text">
     <h3>2. Data Services & Geographical Information Systems (GIS)</h3>
     <p>We can assist with managing, visualising and analysing ecological and social data, including spatial mapping and analysis and using large, unwieldy datasets.</p>
     <p>Our experience includes...</p>
@@ -46,11 +46,11 @@
       <li>Comparing light pollution levels across UK local authorities and habitats.</li>
     </ul>
   </div>
-  <img src="images/data-services.jpg" alt="" class="service-image">
+  <img src="images/data-services.jpg" alt="" class="sidepicture-image">
 </div>
 
-<div class="service-section">
-  <div class="service-text">
+<div class="sidepicture-section">
+  <div class="sidepicture-text">
     <h3>3. Social Science Approaches</h3>
     <p>We are experienced in researching people's attitudes, values and behaviours - particularly how people engage with nature - using surveys, interviews and digital data sources. This information can help to shape more effective and inclusive strategies in nature conservation and beyond.</p>
     <p>Our experience includes...</p>
@@ -60,11 +60,11 @@
       <li>Conducting stakeholder interviews and focus groups <a href="https://doi.org/10.1002/2688-8319.12198">to guide a conservation strategy for hazel dormouse</a>.</li>
     </ul>
   </div>
-  <img src="images/social-science.jpg" alt="" class="service-image">
+  <img src="images/social-science.jpg" alt="" class="sidepicture-image">
 </div>
 
-<div class="service-section reverse">
-  <div class="service-text">
+<div class="sidepicture-section reverse">
+  <div class="sidepicture-text">
     <h3>4. General Scientific Consultancy Services</h3>
     <p>We are also able to provide organisations with general scientific consultancy services, including grant writing, programme development, and practical management guidance relating to both the terrestrial and marine environments.</p>
     <p>Our experience includes...</p>
@@ -75,15 +75,15 @@
       <li>Marine environment - Particularly relating to marine megafauna, fishing and microplastics. (EMILY TO EDIT)</li>
     </ul>
   </div>
-  <img src="images/general-consultancy.jpg" alt="" class="service-image">
+  <img src="images/general-consultancy.jpg" alt="" class="sidepicture-image">
 </div>
 
-<div class="service-section">
-  <div class="service-text">
+<div class="sidepicture-section">
+  <div class="sidepicture-text">
     <h3>5. ANYTHING ELSE EMILY?</h3>
     <p>[Or split out e.g. Grant Writing from above?]</p>
   </div>
-  <img src="images/anything-else.jpg" alt="" class="service-image">
+  <img src="images/anything-else.jpg" alt="" class="sidepicture-image">
 </div>
 
     <p style="text-align: center; font-size: 1.5rem;">...</p>
