--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   <img src="images/evidence-synthesis.jpg" alt="Our Work Areas" class="sidepicture-image">
 </div>
 
+    <p style="text-align: center;">For further details on how we can support your work, see our <b>Services</b> page.</p>
     <p style="text-align: center; font-size: 1.5rem;">...</p>
-    <p>For further details on how we can support your work, see our <b>Services</b> page.</p>
                                                                          
     <h2 style="margin-top: 3.5rem;">Who we are...</h2>
     
