--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   <section>
   <h2>Contact Us</h2>
   <p>
-    <img src="images/email.svg" alt="Email icon" class="contact-icon">
+    <img src="images/email.png" alt="Email icon" class="contact-icon">
     <b>Email:</b> 
     <a href="mailto:bphillips.consultancy@gmail.com">bphillips.consultancy@gmail.com</a>
   </p>
