--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Apex Science & Conservation Consultancy</h1>
     <nav>
-      <a href="index.html">About</a>
+      <a href="about.html">About</a>
       <a href="services.html">Services</a>
       <a href="testimonials.html">Testimonials</a>
       <a href="contact.html">Contact</a>
