--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@
     
     <div class="sidepicture-section">
   <div class="sidepicture-text">
-    <p>Our work spans three key areas:</p>
-    <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys, field experiments, GIS mapping and analysis, 
+    <p>Our work spans three key areas...</p>
+    <p style="margin-top: 1.5rem;">🌿 <b>Ecological Systems</b> - We conduct ecological surveys, field experiments, GIS mapping and analysis, 
       and evidence reviews to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
-    <p>🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - 
+    <p style="margin-top: 1.5rem;">🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - 
       using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
-    <p>🛠️ <b>Consultancy & Data Services</b> – We offer grant writing support, general environmental consultancy, 
+    <p style="margin-top: 1.5rem;">🛠️ <b>Consultancy & Data Services</b> – We offer grant writing support, general environmental consultancy, 
       and data management and analysis services to organisations seeking clear, evidence-based insights.</p>
   </div>
   <img src="images/evidence-synthesis.jpg" alt="Our Work Areas" class="sidepicture-image">
