--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     
     <div class="sidepicture-section">
   <div class="sidepicture-text">
-    <p>Our work spans three key areas...</p>
+    <h2>Our work spans three key areas...</h2>
     <p style="margin-top: 1.5rem;">🌿 <b>Ecological Systems</b> - We conduct ecological surveys, field experiments, GIS mapping and analysis, 
       and evidence reviews to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
     <p style="margin-top: 1.5rem;">🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - 
