--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     
     <div class="sidepicture-section">
   <div class="sidepicture-text">
-    <p style="margin-top: 2rem;">🌿 <b>Ecological Systems</b> - We conduct ecological surveys, field experiments, GIS mapping and analysis, 
+    <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys, field experiments, GIS mapping and analysis, 
       and evidence reviews to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
     <p style="margin-top: 1.5rem;">🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - 
       using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
