--- a/about.html
+++ b/about.html
@@ -20,11 +20,13 @@
 
   <section>
     <h2>About Us</h2>
-    <p style="text-align: center;">At Apex Science & Conservation, we provide scientific support and deliver 
-      nature conservation research that is rigorous, practical, and directly relevant to real-world decisions.</p>
-    <p style="text-align: center;">We work in partnership with NGOs, government agencies, and research institutions, 
-      offering the expertise and capacity to carry out projects that wouldn't otherwise be possible.</p>
-    <p style="text-align: center; font-size: 1.5rem;">...</p>
+    <div class="buffered-text">
+  <p style="text-align: center;">At Apex Science & Conservation, we provide scientific support and deliver 
+    nature conservation research that is rigorous, practical, and directly relevant to real-world decisions.</p>
+  <p style="text-align: center;">We work in partnership with NGOs, government agencies, and research institutions, 
+    offering the expertise and capacity to carry out projects that wouldn't otherwise be possible.</p>
+  <p style="text-align: center; font-size: 1.5rem;">...</p>
+</div>
 
     <h2>Our work spans three key areas...</h2>
     
