--- a/about.html
+++ b/about.html
@@ -42,7 +42,11 @@
   <img src="images/evidence-synthesis.jpg" alt="Our Work Areas" class="sidepicture-image">
 </div>
 
-    <p style="text-align: center; margin-top: 1.5rem;">For further details on how we can support your work, see our <b>Services</b> page.</p>
+    <p style="text-align: center; margin-top: 1.5rem;">
+  For further details on how we can support your work, see our 
+  <a href="services.html"><b>Services</b></a> page.
+</p>
+
     <p style="text-align: center; font-size: 1.5rem;">...</p>
                                                                          
     <h2 style="margin-top: 3.5rem;">Who we are...</h2>
