--- a/about.html
+++ b/about.html
@@ -32,12 +32,12 @@
     
     <div class="sidepicture-section">
   <div class="sidepicture-text">
-    <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys, field experiments, 
-      and evidence reviews to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
+    <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys and experiments, GIS mapping and analysis,
+      and evidence reviews, to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
     <p style="margin-top: 1.5rem;">🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - 
       using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
-    <p style="margin-top: 1.5rem;">🛠️ <b>Consultancy & Data Services</b> – We offer support with data management and analysis, 
-      Geographical Information Systems (GIS), grant writing, programme development, and other consultancy services.</p>
+    <p style="margin-top: 1.5rem;">🛠️ <b>Consultancy & Data Services</b> – We provide data management and analysis, Geographical Information Systems (GIS), 
+      grant writing, programme development, and other consultancy services to support effective, evidence-based conservation.</p>
   </div>
   <img src="images/evidence-synthesis.jpg" alt="Our Work Areas" class="sidepicture-image">
 </div>
