--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
     <div class="buffered-text">
   <p style="text-align: center;">At Apex Science & Conservation, we provide scientific support and deliver 
     nature conservation research that is both rigorous and directly relevant to real-world decisions.</p>
-  <p style="text-align: center;">We work in partnership with NGOs, government agencies, and research institutions, 
-    offering the expertise and capacity to carry out projects that wouldn't otherwise be possible.</p>
+  <p style="text-align: center;">We partner with NGOs, government agencies, and research institutions, 
+    bringing expertise and capacity to deliver projects that might not otherwise be possible.</p>
   <p style="text-align: center; font-size: 1.5rem;">...</p>
 </div>
 
