--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Apex Science & Conservation Consultancy</h1>
+    <h1>Apex Science & Conservation</h1>
     <nav>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
@@ -35,7 +35,7 @@
     <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys and experiments, GIS mapping and analysis,
       and evidence reviews, to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
     <p style="margin-top: 1.5rem;">🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - 
-      using surveys, interviews and digital data, to help shape more effective and inclusive conservation strategies.</p>
+      using surveys, interviews and digital data sources, to help shape more effective and inclusive conservation strategies.</p>
     <p style="margin-top: 1.5rem;">🛠️ <b>Consultancy & Data Services</b> – We provide data management and analysis, 
       grant writing, programme development, and other consultancy services to support effective, evidence-based conservation.</p>
   </div>
