--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 <body>
   <header>
     <h1>Apex Science & Conservation</h1>
+    <p class="tagline">Evidence-based research and consultancy for effective conservation.</p>
     <nav>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
