--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Apex Science & Conservation</h1>
+    <h1>Apex Science & Conservation Consultancy</h1>
     <p class="tagline">Evidence-based research and consultancy for effective conservation.</p>
     <nav>
       <a href="about.html">About</a>
