--- a/services.html
+++ b/services.html
@@ -65,8 +65,8 @@
 
 <div class="sidepicture-section reverse">
   <div class="sidepicture-text">
-    <h3>4. General Scientific Consultancy Services</h3>
-    <p>We are also able to provide organisations with general scientific consultancy services, including grant writing, programme development, and practical management guidance relating to both the terrestrial and marine environments.</p>
+    <h3>4. Other Consultancy Services</h3>
+    <p>We are also able to provide organisations with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
     <p>Our experience includes...</p>
     <ul>
       <li>Grant writing - We have a wealth of experience in writing and reviewing grants, including EMILY's AWARDED GRANTS AND EMILY'S GRANT PANEL FOR DEFRA.</li>
