--- a/services.html
+++ b/services.html
@@ -69,8 +69,8 @@
     <p>We are also able to provide organisations with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
     <p>Our experience includes...</p>
     <ul>
-      <li>Grant writing - We have a wealth of experience in writing and reviewing grants, including EMILY's AWARDED GRANTS AND EMILY'S GRANT PANEL FOR DEFRA.</li>
-      <li>Programme development - We have been responsible for developing, managing and delivering research programmes, so can offer support in this area.</li>
+      <li>Grant writing - Based on our wealth of experience writing and reviewing grants, including EMILY's AWARDED GRANTS AND EMILY'S GRANT PANEL FOR DEFRA.</li>
+      <li>Programme development - Support in the design, management and delivery of scientific research programmes and related activities.</li>
       <li>Habitat / land management - Particularly relating to road verges, public spaces, gardens, farmland and pollinators.</li>
       <li>Marine environment - Particularly relating to marine megafauna, fishing and microplastics. (EMILY TO EDIT)</li>
     </ul>
