--- a/about.html
+++ b/about.html
@@ -8,15 +8,17 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Apex Science & Conservation Consultancy</h1>
-    <nav>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+  <header style="text-align: center; padding: 1rem;">
+  <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo" style="height: 80px; width: auto; margin-bottom: 0.5rem;">
+  <h1 style="margin: 0.5rem 0 0.25rem 0;">Apex Science & Conservation Consultancy</h1>
+  <p style="margin: 0; font-style: italic; color: #555;">Evidence-based research and consultancy for effective conservation.</p>
+  <nav style="margin-top: 0.5rem;">
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="testimonials.html">Testimonials</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
   <section>
     <h2>About Us</h2>
