--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header style="text-align: center; padding: 1rem;">
-  <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo" style="height: 80px; width: auto; margin-bottom: 0.5rem;">
-  <h1 style="margin: 0.5rem 0 0.25rem 0;">Apex Science & Conservation Consultancy</h1>
-  <p style="margin: 0; font-style: italic; color: #555;">Evidence-based research and consultancy for effective conservation.</p>
-  <nav style="margin-top: 0.5rem;">
+  <header style="display: flex; align-items: center; justify-content: space-between; padding: 0.5rem 1rem;">
+  <a href="about.html">
+    <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo" style="height: 60px; width: auto;">
+  </a>
+  <nav>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
     <a href="testimonials.html">Testimonials</a>
