--- a/services.html
+++ b/services.html
@@ -8,15 +8,17 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Apex Science & Conservation Consultancy</h1>
-    <nav>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+  <header style="display: flex; align-items: center; justify-content: space-between; padding: 0.5rem 1rem;">
+  <a href="about.html">
+    <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo" style="height: 60px; width: auto;">
+  </a>
+  <nav>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="testimonials.html">Testimonials</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
   <section>
     <h2>Our Services & Experience</h2>
