--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
     <a href="testimonials.html">Testimonials</a>
+    <a href="publication.html">Publications</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
