--- a/publications.html
+++ b/publications.html
@@ -3,33 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Testimonials for Apex Science & Conservation Consultancy." />
+  <meta name="description" content="Publications for Apex Science & Conservation Consultancy." />
   <title>Testimonials | Apex Science & Conservation Consultancy</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header style="display: flex; align-items: center; justify-content: space-between; padding: 0.5rem 1rem;">
+  <header style="display: flex; align-items: center; justify-content: space-between; padding: 0.5rem 1.75rem;">
   <a href="about.html">
-    <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo" style="height: 70px; width: auto;">
+    <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo" style="height: 65px; width: auto;">
   </a>
   <nav>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
     <a href="testimonials.html">Testimonials</a>
+    <a href="publication.html">Publications</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
 
   <section>
-    <h2>Testimonials</h2>
-    <p style="margin-top: 3rem; padding-left: 15%;"><i>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</i></p>
-    <p style="padding-left: 15%;"><b>Sam Manning, The Woodland Trust</b></p>
-    <p style="text-align: center; font-size: 1.5rem;">...</p>
-    <p style="text-align: right; padding-right: 15%;"><i>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</i></p>
-    <p style="text-align: right; padding-right: 15%;"><b>PERSON 2, ORGANISATION 2</b></p>
-    <p style="text-align: center; font-size: 1.5rem;">...</p>
-    <p style="padding-left: 15%;"><i>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</i></p>
-    <p style="padding-left: 15%;"><b>PERSON 3, ORGANISATION 3</b></p>
+    <h2>Publications</h2>
+    <p>Publication 1. DETAILS</p>
+    <p>Publication 2. DETAILS</p>
+    <p>Publication 3. DETAILS</p>
   </section>
 
   <footer>
