--- a/testimonials.html
+++ b/testimonials.html
@@ -8,14 +8,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header style="display: flex; align-items: center; justify-content: space-between; padding: 0.5rem 1rem;">
+  <header style="display: flex; align-items: center; justify-content: space-between; padding: 0.5rem 1.75rem;">
   <a href="about.html">
-    <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo" style="height: 70px; width: auto;">
+    <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo" style="height: 65px; width: auto;">
   </a>
   <nav>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
     <a href="testimonials.html">Testimonials</a>
+    <a href="publication.html">Publications</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
