--- a/publications.html
+++ b/publications.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Publications for Apex Science & Conservation Consultancy." />
-  <title>Testimonials | Apex Science & Conservation Consultancy</title>
+  <title>Publications | Apex Science & Conservation Consultancy</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header style="display: flex; align-items: center; justify-content: space-between; padding: 0.5rem 1.75rem;">
-  <a href="about.html">
-    <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo" style="height: 65px; width: auto;">
-  </a>
-  <nav>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="testimonials.html">Testimonials</a>
-    <a href="publication.html">Publications</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+  <header>
+    <a href="about.html">
+      <img src="images/logo-apex.png" alt="Apex Science & Conservation Consultancy Logo">
+    </a>
+    <nav>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="testimonials.html">Testimonials</a>
+      <a href="publication.html">Publications</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
   <section>
     <h2>Publications</h2>
