--- a/about.html
+++ b/about.html
@@ -28,9 +28,10 @@
     nature conservation research that is both rigorous and directly relevant to real-world decisions.</p>
   <p style="text-align: center;">We partner with NGOs, government agencies, and research institutions, 
     bringing expertise and capacity to deliver projects that might not otherwise be possible.</p>
-  <p style="text-align: center; font-size: 1.5rem;">...</p>
 </div>
 
+    <hr class="section-divider">
+    
     <h2>Our work spans three key areas...</h2>
     
     <div class="sidepicture-section">
