--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
   <a href="services.html"><b>Services</b></a> page.
 </p>
 
-    <p style="text-align: center; font-size: 1.5rem;">...</p>
+    <hr class="section-divider">
                                                                          
     <h2 style="margin-top: 3.5rem;">Who we are...</h2>
     
