--- a/services.html
+++ b/services.html
@@ -89,7 +89,7 @@
   <img src="images/anything-else.jpg" alt="" class="sidepicture-image">
 </div>
 
-    <p style="text-align: center; font-size: 1.5rem;">...</p>
+    <hr class="section-divider">
     
     <p style="margin-top: 3rem; text-align: center;">
   If you have a need that isn't listed above, don't hesitate to get in touch.
