--- a/services.html
+++ b/services.html
@@ -38,6 +38,8 @@
   <img src="images/evidence-synthesis.jpg" alt="" class="sidepicture-image">
 </div>
 
+    <hr class="section-divider">
+    
 <div class="sidepicture-section reverse">
   <div class="sidepicture-text">
     <h3>2. Data Services & Geographical Information Systems (GIS)</h3>
@@ -51,6 +53,8 @@
   </div>
   <img src="images/data-services.jpg" alt="" class="sidepicture-image">
 </div>
+
+    <hr class="section-divider">
 
 <div class="sidepicture-section">
   <div class="sidepicture-text">
@@ -66,6 +70,8 @@
   <img src="images/social-science.jpg" alt="" class="sidepicture-image">
 </div>
 
+    <hr class="section-divider">
+
 <div class="sidepicture-section reverse">
   <div class="sidepicture-text">
     <h3>4. Other Consultancy Services</h3>
@@ -80,6 +86,8 @@
   </div>
   <img src="images/general-consultancy.jpg" alt="" class="sidepicture-image">
 </div>
+
+    <hr class="section-divider">
 
 <div class="sidepicture-section">
   <div class="sidepicture-text">
