--- a/testimonials.html
+++ b/testimonials.html
@@ -31,6 +31,9 @@
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     <p style="padding-left: 15%;"><i>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</i></p>
     <p style="padding-left: 15%;"><b>PERSON 3, ORGANISATION 3</b></p>
+
+    <img src="images/evidence-synthesis.jpg" alt="Image" style="display: block; margin: 2rem auto 0 auto; width: 75%; height: auto; border-radius: 8px;">
+    
   </section>
 
   <footer>
