--- a/services.html
+++ b/services.html
@@ -24,6 +24,8 @@
   <section>
     <h2>Our Services & Experience</h2>
 
+    <hr class="section-divider">
+    
 <div class="sidepicture-section">
   <div class="sidepicture-text">
     <h3>1. Evidence Synthesis</h3>
