--- a/testimonials.html
+++ b/testimonials.html
@@ -74,6 +74,28 @@
 
   </section>
 
+  <section style="position: relative; width: 75%; margin: 2rem auto; border-radius: 8px; overflow: hidden;">
+
+  <img src="images/evidence-synthesis.jpg" alt="Image" style="width: 100%; height: auto; display: block; border-radius: 8px;">
+
+  <div style="position: absolute; top: 10%; left: 10%; right: 10%; color: white; font-style: italic; font-size: 1.2rem; text-shadow: 1px 1px 4px rgba(0,0,0,0.8);">
+    <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</p>
+    <p style="font-weight: bold; margin-top: 0.5rem;">Sam Manning, The Woodland Trust</p>
+  </div>
+
+  <div style="position: absolute; top: 40%; right: 10%; left: 10%; color: white; font-style: italic; font-size: 1.2rem; text-align: right; text-shadow: 1px 1px 4px rgba(0,0,0,0.8);">
+    <p>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</p>
+    <p style="font-weight: bold; margin-top: 0.5rem;">PERSON 2, ORGANISATION 2</p>
+  </div>
+
+  <div style="position: absolute; bottom: 10%; left: 10%; right: 10%; color: white; font-style: italic; font-size: 1.2rem; text-shadow: 1px 1px 4px rgba(0,0,0,0.8);">
+    <p>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</p>
+    <p style="font-weight: bold; margin-top: 0.5rem;">PERSON 3, ORGANISATION 3</p>
+  </div>
+
+</section>
+
+
   <footer>
   <p class="footer-contact">
     <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
