--- a/testimonials.html
+++ b/testimonials.html
@@ -26,6 +26,7 @@
   <img src="images/evidence-synthesis.jpg" alt="Image" style="width: 100%; height: auto; display: block; border-radius: 8px;">
 
   <div style="position: absolute; top: 10%; left: 10%; right: 10%; color: white; font-style: italic; font-size: 1rem; text-shadow: 1px 1px 4px rgba(0,0,0,0.8);">
+    <h2> Testimonials
     <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</p>
     <p style="font-weight: bold; margin-top: 0.5rem;">Sam Manning, The Woodland Trust</p>
   </div>
