--- a/testimonials.html
+++ b/testimonials.html
@@ -20,11 +20,11 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-
-  <h2> Testimonials
     
   <section style="position: relative; width: 95%; margin: 2rem auto; border-radius: 8px; overflow: hidden;">
 
+    <h2> Testimonials </h2>
+    
   <img src="images/evidence-synthesis.jpg" alt="Image" style="width: 100%; height: auto; display: block; border-radius: 8px;">
 
   <div style="position: absolute; top: 10%; left: 20%; right: 20%; color: white; font-style: italic; font-size: 1rem; text-shadow: 1px 1px 4px rgba(0,0,0,0.8);">
