--- a/testimonials.html
+++ b/testimonials.html
@@ -25,21 +25,21 @@
 
   <img src="images/evidence-synthesis.jpg" alt="Image" style="width: 100%; height: auto; display: block; border-radius: 8px;">
 
-  <h2 style="position: absolute; top: 2%; left: 20%; right: 20%; color: white; font-size: 2rem; font-weight: 600; margin: 0; text-shadow: 1px 1px 4px rgba(0,0,0,0.8);">
+  <h2 style="position: absolute; top: 2%; left: 2rem; color: white; font-size: 2rem; font-weight: 600; margin: 0;">
     Testimonials
   </h2>
 
-  <div style="position: absolute; top: 12%; left: 20%; right: 20%; color: white; font-style: italic; font-size: 1rem; text-shadow: 1px 1px 4px rgba(0,0,0,0.8);">
+  <div style="position: absolute; top: 12%; left: 20%; right: 20%; color: white; font-style: italic; font-size: 1rem;">
     <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</p>
     <p style="margin-top: 0.5rem; font-style: normal; font-weight: normal;">Sam Manning, The Woodland Trust</p>
   </div>
 
-  <div style="position: absolute; top: 40%; right: 20%; left: 20%; color: white; font-style: italic; font-size: 1rem; text-align: right; text-shadow: 1px 1px 4px rgba(0,0,0,0.8);">
+  <div style="position: absolute; top: 40%; right: 20%; left: 20%; color: white; font-style: italic; font-size: 1rem; text-align: right;">
     <p>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</p>
     <p style="margin-top: 0.5rem; font-style: normal; font-weight: normal;">PERSON 2, ORGANISATION 2</p>
   </div>
 
-  <div style="position: absolute; bottom: 5%; left: 20%; right: 20%; color: white; font-style: italic; font-size: 1rem; text-shadow: 1px 1px 4px rgba(0,0,0,0.8);">
+  <div style="position: absolute; bottom: 5%; left: 20%; right: 20%; color: white; font-style: italic; font-size: 1rem;">
     <p>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</p>
     <p style="margin-top: 0.5rem; font-style: normal; font-weight: normal;">PERSON 3, ORGANISATION 3</p>
   </div>
