--- a/about.html
+++ b/about.html
@@ -32,6 +32,42 @@
  </section>
 
   <section>
+    <h2>About Us</h2>
+  <p style="text-align: center;">At Apex Science & Conservation, we provide scientific support and deliver 
+    nature conservation research that is both rigorous and directly relevant to real-world decisions.</p>
+  <p style="text-align: center;">We partner with NGOs, government agencies, and research institutions, 
+    bringing expertise and capacity to deliver projects that might not otherwise be possible.</p>
+ </section>
+
+  <section>
+  <h2>About Us</h2>
+  <div class="buffered-text" style="padding-left: 20%; padding-right: 20%;">
+    <p style="text-align: center;">
+      At Apex Science & Conservation, we provide scientific support and deliver 
+      nature conservation research that is both rigorous and directly relevant to real-world decisions.
+    </p>
+    <p style="text-align: center;">
+      We partner with NGOs, government agencies, and research institutions, 
+      bringing expertise and capacity to deliver projects that might not otherwise be possible.
+    </p>
+  </div>
+</section>
+
+  <section>
+  <h2>About Us</h2>
+  <div style="padding-left: 20%; padding-right: 20%;">
+    <p style="text-align: center;">
+      At Apex Science & Conservation, we provide scientific support and deliver 
+      nature conservation research that is both rigorous and directly relevant to real-world decisions.
+    </p>
+    <p style="text-align: center;">
+      We partner with NGOs, government agencies, and research institutions, 
+      bringing expertise and capacity to deliver projects that might not otherwise be possible.
+    </p>
+  </div>
+</section>
+
+  <section>
     <h2>Our work spans three key areas...</h2>
     
     <div class="sidepicture-section">
