--- a/testimonials.html
+++ b/testimonials.html
@@ -25,7 +25,7 @@
 
   <img src="images/evidence-synthesis.jpg" alt="Image" style="width: 100%; height: auto; display: block; border-radius: 8px;">
 
-  <h2 style="position: absolute; top: 2%; left: 2rem; color: white; font-size: 2rem; font-weight: 600; margin: 0;">
+  <h2 style="position: absolute; top: 5%; left: 5%; color: white; font-size: 1.5rem; font-weight: 600; margin: 0;">
     Testimonials
   </h2>
 
