--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
   </section>
 
   <section>
-    <h2;">Who we are...</h2>
+    <h2>Who we are...</h2>
     
     <div class="profile" style="display: flex; align-items: center; gap: 1rem; margin-top: 2rem;">
   <img src="images/Photo-Ben.jpg" alt="Dr Ben Phillips" style="width: 250px; height: auto; border-radius: 8px;">
