--- a/services.html
+++ b/services.html
@@ -23,8 +23,6 @@
 
   <section>
     <h2>Our Services & Experience</h2>
-
-    <hr class="section-divider">
     
 <div class="sidepicture-section">
   <div class="sidepicture-text">
@@ -99,9 +97,11 @@
   <img src="images/anything-else.jpg" alt="" class="sidepicture-image">
 </div>
 
-    <hr class="section-divider">
+  </section>
+
+  <section>
     
-    <p style="margin-top: 3rem; text-align: center;">
+    <p style="text-align: center;">
   If you have a need that isn't listed above, don't hesitate to get in touch.
 </p>
 <p style="text-align: center;">
