--- a/testimonials.html
+++ b/testimonials.html
@@ -21,9 +21,10 @@
     </nav>
   </header>
     
-  <section style="position: relative; width: 95%; margin: 2rem auto; border-radius: 8px; overflow: hidden;">
+  <section style="position: relative; width: 95%; height: 500px; margin: 2rem auto; border-radius: 8px; overflow: hidden;">
 
-  <img src="images/evidence-synthesis.jpg" alt="Image" style="width: 100%; height: auto; display: block; border-radius: 8px;">
+  <img src="images/evidence-synthesis.jpg" alt="Image" 
+       style="width: 100%; height: 100%; display: block; border-radius: 8px; object-fit: cover;">
 
   <h2 style="position: absolute; top: 7%; left: 4%; color: white; font-size: 1.75rem; font-weight: 600; margin: 0;">
     Testimonials
