--- a/about.html
+++ b/about.html
@@ -57,6 +57,32 @@
   </section>
 
   <section>
+  <h2>Who we are...</h2>
+
+  <div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center; margin-top: 2rem;">
+
+    <div style="flex: 1 1 45%; max-width: 45%; text-align: center;">
+      <img src="images/Photo-Ben.jpg" alt="Dr Ben Phillips" style="width: 100%; max-width: 250px; height: auto; border-radius: 8px; margin-bottom: 1rem;">
+      <h3 style="margin-top: 0;">Dr Ben Phillips</h3>
+      <p>Ben is a nature conservation scientist with over 10 years’ experience delivering applied research that 
+        supports biodiversity, informs land management, and connects people with nature.</p>
+      <p>His work combines ecological and social sciences using a collaborative, solution-focused approach. 
+        Particular focuses have included pollinator conservation, management of road verges, and understanding 
+        people's attitudes and behaviour relating to nature.</p>
+    </div>
+
+    <div style="flex: 1 1 45%; max-width: 45%; text-align: center;">
+      <img src="images/Photo-Emily.jpg" alt="Dr Emily Duncan" style="width: 100%; max-width: 250px; height: auto; border-radius: 8px; margin-bottom: 1rem;">
+      <h3 style="margin-top: 0;">Dr Emily Duncan</h3>
+      <p>Emily is a conservation biologist with more than a decade of experience carrying out marine research globally.</p>
+      <p>Much of her work has focused on marine megafauna and plastic pollution, for which she was named on the prestigious Forbes 30 Under 30 list. 
+        Emily is experienced in delivering large collaborative international projects, and positions policy and community engagement at the heart of her work.</p>
+    </div>
+
+  </div>
+</section>
+
+  <section>
     <h2>Who we are...</h2>
     
     <div class="profile" style="display: flex; align-items: center; gap: 1rem; margin-top: 2rem;">
