--- a/testimonials.html
+++ b/testimonials.html
@@ -20,15 +20,15 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-    
+  
+    <section>
+      <h2> Testimonials</h2>
+    </section>
+      
   <section style="position: relative; width: 95%; height: 500px; margin: 2rem auto; border-radius: 8px; overflow: hidden;">
 
   <img src="images/evidence-synthesis.jpg" alt="Image" 
        style="width: 100%; height: 100%; display: block; border-radius: 8px; object-fit: cover;">
-
-  <h2 style="position: absolute; top: 7%; left: 4%; color: white; font-size: 1.75rem; font-weight: 600; margin: 0;">
-    Testimonials
-  </h2>
 
   <div style="position: absolute; top: 20%; left: 20%; right: 20%; color: white; font-style: italic; font-size: 1rem;">
     <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</p>
