--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,9 @@
 
   <section>
     <h2>Publications</h2>
+  </section>
+
+  <section>
     <p>Publication 1. DETAILS</p>
     <p>Publication 2. DETAILS</p>
     <p>Publication 3. DETAILS</p>
