--- a/services.html
+++ b/services.html
@@ -101,18 +101,13 @@
   </section>
 
   <section>
-    
-    <p style="text-align: center;">
-  If you have a need that isn't listed above, don't hesitate to get in touch.
-</p>
-<p style="text-align: center;">
-  We will be more than happy to discuss your requirements, and to point you in the right direction wherever we can.
-</p>
-
-  </section>
-
-
-  
+  <p style="text-align: center;">
+    If you have a need that isn't listed above, don't hesitate to <a href="contact.html">get in touch</a>.
+  </p>
+  <p style="text-align: center;">
+    We will be more than happy to discuss your requirements, and to point you in the right direction wherever we can.
+  </p>
+</section>
 
   <footer>
   <p class="footer-contact">
