--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,7 @@
 
   <section>
     <h2>Publications</h2>
+    <p>Below are a sample of our publications, largely based on our collective 20+ years spent working in research. Order by theme / topic? IMPROVE / DETAILS</p>
     <p>Publication 1. DETAILS</p>
     <p>Publication 2. DETAILS</p>
     <p>Publication 3. DETAILS</p>
