--- a/contact.html
+++ b/contact.html
@@ -92,6 +92,34 @@
   </div>
 </section>
 
+  <section style="padding: 2rem 1rem; max-width: 800px; margin: 0 auto; text-align: center;">
+  <h2>Contact Us</h2>
+  <p style="font-size: 1.1rem; max-width: 600px; margin: 0.5rem auto 1.5rem;">
+    We'd love to hear from you if you have a project in mind or simply want to learn more about how we can support your work.
+  </p>
+
+  <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 3rem; align-items: center;">
+
+    <div>
+      <a href="mailto:bphillips.consultancy@gmail.com" style="text-decoration: none; color: inherit;">
+        <img src="images/email.png" alt="Email icon" style="width: 36px; height: 36px; margin-bottom: 0.5rem;">
+        <p style="margin: 0; font-weight: 500;">bphillips.consultancy@gmail.com</p>
+      </a>
+    </div>
+
+    <div>
+      <img src="images/linkedin.png" alt="LinkedIn icon" style="width: 36px; height: 36px; margin-bottom: 0.5rem;">
+      <p style="margin: 0; font-weight: 500;">
+        Connect on LinkedIn:
+        <a href="https://www.linkedin.com/in/benjamin-b-phillips/">Ben</a> /
+        <a href="https://www.linkedin.com/in/emily-duncan-7a324b64">Emily</a>
+      </p>
+    </div>
+
+  </div>
+</section>
+
+
   <footer>
     &copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.
   </footer>
