--- a/services.html
+++ b/services.html
@@ -100,12 +100,12 @@
 </div>
   </section>
 
-  <section>
-  <p style="text-align: center;">
-    If you have a need that isn't listed above, don't hesitate to <a href="contact.html">get in touch</a>.
+  <section style="padding: 2rem 1rem; max-width: 700px; margin: 0 auto; text-align: center;">
+  <p>
+    If you have a project in mind that isn’t listed above, we’d love to <a href="contact.html">hear from you</a>.
   </p>
-  <p style="text-align: center;">
-    We will be more than happy to discuss your requirements, and to point you in the right direction wherever we can.
+  <p>
+    We’re always happy to discuss your needs and help you find the right next steps.
   </p>
 </section>
 
