--- a/publications.html
+++ b/publications.html
@@ -21,13 +21,24 @@
     </nav>
   </header>
 
-  <section>
-    <h2>Publications</h2>
-    <p>Below are a sample of our publications, largely based on our collective 20+ years spent working in research. Order by theme / topic? IMPROVE / DETAILS</p>
-    <p>Publication 1. DETAILS</p>
-    <p>Publication 2. DETAILS</p>
-    <p>Publication 3. DETAILS</p>
-  </section>
+  <section style="padding: 2rem 1rem; max-width: 800px; margin: 0 auto;">
+  <h2>Publications</h2>
+  <p>
+    Over the past 20+ years in research, we have published work that underpins evidence-based conservation and supports real-world decisions. Below is a selection of our publications, spanning topics including pollinator conservation, marine plastic pollution, and effective land management.
+  </p>
+
+  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips, B. et al. (2023).</b> Managing roadside verges for pollinator conservation. <i>Conservation Biology.</i> <a href="#">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Duncan, E. et al. (2022).</b> Global patterns of plastic ingestion in marine megafauna. <i>Nature Communications.</i> <a href="#">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips, B. & Duncan, E. (2021).</b> Integrating ecological and social sciences for effective conservation. <i>Ecology & Society.</i> <a href="#">View publication</a>
+    </li>
+  </ul>
+</section>
 
   <footer>
   <p class="footer-contact">
